# IAU-course

./: README.md  conditions.md
exercises/: README.md  conda-m2.yml  pyproject.toml  reqs-spark.txt  reqs-tf.txt  requirements.txt
exercises/week-01/: IAU_011_python.ipynb  IAU_01_DU_python_continue.ipynb  IAU_01_DU_riesenie.ipynb  IAU_01_python.ipynb  IAU_02_pandas.ipynb  IAU_03_numpy.ipynb  IAU_04_scipy.ipynb  IAU_homework_pandas-solution.ipynb  IAU_homework_pandas.ipynb  IAU_homework_python-solution.ipynb  IAU_homework_python.ipynb  IAU_python.ipynb  README.md
exercises/week-02/: IAU_01_pandas-dataframes.ipynb  IAU_021_pandas.ipynb  IAU_023_scipy.ipynb  IAU_02_DU.ipynb  IAU_02_DU_numpy_pandas.ipynb  IAU_02_DU_riesenie.ipynb  IAU_02_pandas-numpy.ipynb  IAU_03_pandas-data-integration.ipynb  IAU_04_pandas-descriptive-statistics.ipynb  IAU_homework_pandas.ipynb  README.md
exercises/week-03/: IAU_01_EDA-iris.ipynb  IAU_02_EDA-airbase.ipynb  IAU_02_EDA-long-version.ipynb  IAU_031_EDA_vizualisation_iris.ipynb  IAU_032_EDA.ipynb  IAU_03_DU.ipynb  IAU_03_DU_EDA_again.ipynb  IAU_03_EDA-country-obese.ipynb  IAU_03_EDA-long-version.ipynb  IAU_04_EDA-country-obese.ipynb  IAU_homework_tips-diamonds-monitoring.ipynb  README.md
exercises/week-04/: IAU_01_EDA-statistical-analysis.ipynb  IAU_02_EDA-statistical-power.ipynb  IAU_041_pandas.ipynb  IAU_042_pandas_integration.ipynb  IAU_04_DU_pandas_again.ipynb  IAU_04_DU_riesenie.ipynb  IAU_homework-01_stats-cars.ipynb  IAU_homework-02_stats-cars.ipynb  README.md  airbase.py
exercises/week-05/: IAU_02_feature_selection.ipynb  (+5 more)
(+86 files in other folders)
